# origis

./: .gitignore  Cargo.toml  LICENCE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml
docs/: branch-conventions.md  commit-conventions.md  definition-of-done.md  labels.md  priorities.md  rust-conventions.md  user-stories-mvp.md  versioning.md  workflow-linear.md
src/: main.rs
src/storage/: repository.rs
