[package]
name = "origis"
version = "0.1.0"
edition = "2021"
authors = ["Origis Team"]
description = "Git-like version control for databases"
license = "MIT"
repository = "https://github.com/origisdb/origis"
readme = "README.md"
keywords = ["database", "versioning", "git", "cli", "sqlite"]
categories = ["command-line-utilities", "database"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "0.9.11"
